--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "^5.4.3",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-error-boundary": "^4.0.11"
   },
   "devDependencies": {
     "@types/node": "^20",
